<resources>
    <string name="app_name">Selecta</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Current Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Get Started</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email completions.</string>

    <string name="password_updated">Password updated, sign in with new password!</string>

    <string name="send">Send</string>
    <string name="enter_message">Enter a Message</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Log in failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="hint_password">Password</string>
    <string name="hint_password2">Choose Password</string>
    <string name="hint_password3">Choose New Password</string>
    <string name="hint_name">First Name</string>
    <string name="btn_login">Login</string>
    <string name="btn_link_to_register">Not a member? Register here!</string>
    <string name="btn_link_to_login">Already registered? Login here!</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back">Back</string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Confirm</string>
    <string name="btn_send">Send</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">Please enter your email address and we will send you password reset instructions.</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="tab_text_1">Profile</string>
    <string name="tab_text_2">Matches</string>
    <string name="tab_text_3">Messages</string>
    <string name="action_settings">Account Settings</string>
    <string name="choose_day">What Day?</string>

    <string-array name="Subgenres">
        <item>Pick a Subgenre</item>
        <item>Dancefloor</item>
        <item>Jump Up</item>
        <item>Neuro</item>
        <item>Liquid</item>
        <item>Jungle</item>
        <item>Minimal</item>
        <item>Half-time</item>
    </string-array>

    <string-array name="Gender">
        <item>I am a:</item>
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>

    <string-array name="Matches">
        <item>I am looking for:</item>
        <item>Dates</item>
        <item>Mates</item>
        <item>Both</item>
    </string-array>

    <string-array name="foodPOI">
        <item>McDonalds</item>
        <item>KFC</item>
        <item>Burger King</item>
        <item>Subway</item>
        <item>Prezzo</item>
        <item>Wetherspoon</item>
        <item>Pizza Hut</item>
        <item>Dominos</item>
        <item>YO! Sushi</item>
        <item>Wagamama</item>
        <item>Frankie &amp; Bennys</item>
        <item>Las Iguanas</item>
        <item>Nandos</item>
    </string-array>


</resources>
